@@ -1698,14 +1698,14 @@ player_magic magic_info[MAX_CLASS] =
 			{ 99,  0,  0,   0},
 			
 			{ 15,  5, 30,  15},
-			{ 30,  6, 50,  40},
-			
+                        { 25,  6, 50,  40},
+                        { 30,  8, 60,  60},
+                        { 35,  9, 70,  90},
 			{ 99,  0,  0,   0},
 			{ 99,  0,  0,   0},
 			{ 99,  0,  0,   0},
 			{ 99,  0,  0,   0},
-			{ 99,  0,  0,   0},
-			{ 99,  0,  0,   0},
+
 			{ 99,  0,  0,   0},
 			{ 99,  0,  0,   0},
 			{ 99,  0,  0,   0},
@@ -2882,7 +2882,7 @@ u32b spell_flags[7][9][2] =
 	{
 		/*** Warrior fight books(only 2 books) ***/
                 {0x0000001f, 0x00000000},
-                {0x00000300, 0x00000000},
+                {0x0000ff00, 0x00000000},
 	},
 	
 	{
@@ -3190,6 +3190,13 @@ cptr spell_names[8][64] =
 
                 /* Fingolfin's Combat Technics */
                 "Iron Skin",
+                "Dig",
+                "Furry",
+                "Spin",
+                "",
+                "",
+                "",
+                "",
 	},
 
 	
